--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -142,8 +142,7 @@ $(window).load(function() {
         <!-- HTMLで出力 -->
         <li>
           <div class="tour">
-            <div class="pic">
-              <img src="<%= @img_url %>" alt="<%= @caption %>">
+            <div class="pic" style="background-image:url('<%= @img_url %>');">
             </div>
 
             <div class="gradient"></div>
