--- a/app/assets/stylesheets/top.css.scss
+++ b/app/assets/stylesheets/top.css.scss
@@ -1,7 +1,19 @@
 #index .icon { display: inline-block; }
-#index .icon_plane a { width: auto; height: 16px; line-height: 16px; vertical-align: top; opacity: 0.8; z-index: 10; cursor: pointer; text-decoration: none !important; position: absolute; top: 55px; right: 70px; z-index: 10; }
-#index .icon_plane a:hover  { opacity: 1; }
-#index .icon_plane a  { color: #fff; }
+#index .icon a {
+  width: auto;
+  height: 16px;
+  line-height: 16px;
+  vertical-align: top;
+  color: #fff;
+  text-decoration: none !important;
+  opacity: 0.8;
+  z-index: 10;
+  position: absolute;
+  top: 55px;
+  right: 70px;
+}
+#index .icon a:hover  { opacity: 1; }
+#index .icon img { padding-right: 5px; }
 
 #index .main {
   min-width: 800px;
