--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -15,7 +15,7 @@ $(function(){
     <div class="row">
       <div class="cell">
         <div class="icon">
-          <div class="icon_plane"><a id="jump" href="#about"><i class="fa fa-plane fa-fw"></i>タビノタネについて</a></div>
+          <a id="jump" href="#about"><%= image_tag('icon_airplane_f.png') %>タビノタネについて</a>
         </div>
 
         <div class="logo">
