--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,9 +13,9 @@
  *= require_tree .
  *= require_self
  *
- *= require darktooltip
  *= require flexslider
  *= require font-awesome
+ *= require jquery.powertip
  */
 
 html, body {
