--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -180,6 +180,10 @@ $(window).load(function() {
     <div id="map_canvas"></div>
   </div>
 
+  <div class="footer">
+    Copyright &copy; <a href="/" alt="Home">Tabinotane</a>. All rights reserved.
+  </div>
+
   </div>
 <% end %>
 
