--- a/app/views/tour/question11.html.erb
+++ b/app/views/tour/question11.html.erb
@@ -45,18 +45,18 @@ function show() {
     <div class="question">気になるカードはどっち？</div>
 
     <div class="icon">
-      <div class="icon_refresh"><a href="/question07"><%= image_tag('icon_loop_3.png') %>他の質問を選ぶ</a></div>
+      <a href="/question07"><%= image_tag('icon_loop_3.png') %>他の質問を選ぶ</a>
     </div>
   </div>
 
   <div class="pic">
-    <%= link_to image_tag('q11_l.png', :class=>"circle"), '/selection' %>
+    <span><%= link_to image_tag('q11_l.png', :class=>"circle"), '/selection' %></span>
 
     <div id="target" class="hidden">
       <%= image_tag('loading.gif') %>
     </div>
 
-    <%= link_to image_tag('q11_r.png', :class=>"circle"), '/selection' %>
+    <span><%= link_to image_tag('q11_r.png', :class=>"circle"), '/selection' %></span>
 
    </div>
 </div>
