--- a/app/views/tour/select.html.erb
+++ b/app/views/tour/select.html.erb
@@ -50,12 +50,12 @@ function show() {
   </div>
   
   <div class="pic">
-    <%= link_to image_tag(@image_l.path, :class => "circle"), '/tour?imgid=' + @image_l.image_id, {:onclick => "show();", data: {no_turbolink: true}} %>
+    <span><%= link_to image_tag(@image_l.path, :class => "circle"), '/tour?imgid=' + @image_l.image_id, {:onclick => "show();", data: {no_turbolink: true}} %></span>
 
     <div id="target" class="hidden">
       <%= image_tag('loading.gif') %>
     </div>
     
-    <%= link_to image_tag(@image_r.path, :class => "circle"), '/tour?imgid=' + @image_r.image_id, {:onclick => "show();", data: {no_turbolink: true}} %>
+    <span><%= link_to image_tag(@image_r.path, :class => "circle"), '/tour?imgid=' + @image_r.image_id, {:onclick => "show();", data: {no_turbolink: true}} %></span>
   </div>
 </div>
