--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -24,7 +24,7 @@ $(function(){
         </div>
 
         <div class="button_top">
-          <a href="/question07" alt="今すぐはじめる">今すぐはじめる</a>
+          <a href="/ask" alt="今すぐはじめる">今すぐはじめる</a>
         </div>
       </div>
     </div>
