--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -164,7 +164,9 @@ $(window).load(function() {
               <% @timedif = item['dest']['lng'].to_i/15 %>
               <div class="info">
                 今の時間 <%= (Time.now + 3600 * @timedif).strftime("%Y.%m.%d %H:%M")  %> (日本との時差 -<%= @timedif - 9 %>時間)<br />
-                観光スポット<br />
+                <% if item['spots'].count > 0 %>
+                  観光スポット<br />
+                <% end %>
                 <ul>
                 <% item['spots'].each do |spot| %>
                   <li><%= spot['name'] %>
