--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -44,7 +44,7 @@ $(window).load(function() {
       styles: styles
     };
     var map = new google.maps.Map(document.getElementById("map_canvas"), mapOptions);
-    
+
     iconActive = new google.maps.MarkerImage('assets/pin_a.png',
       new google.maps.Size(50,79),
       new google.maps.Point(0,0),
@@ -148,14 +148,14 @@ $(window).load(function() {
 
             <div class="text">
               <h2><%= @city %></h2>
-              
-              <% @timedif = item['dest']['lng'].to_i/15 %> 
+
+              <% @timedif = item['dest']['lng'].to_i/15 %>
               <div class="info">
                 今の時間 <%= (Time.now + 3600 * @timedif).strftime("%Y.%m.%d %H:%M")  %> (日本との時差 -<%= @timedif - 9 %>時間)<br />
                 今日の天気<br />
                 観光スポット
               </div>
-              
+
               <div class="icon">
                 <span class="fa-stack fa-lg">
                   <a class="tooltip" data-tooltip="もっと写真をみる" href="<%= "/detail?tourid=" + item['id'] %>" target="_blank">
@@ -170,7 +170,7 @@ $(window).load(function() {
                   </a>
                 </span>
                 <span class="fa-stack fa-lg">
-                  <a class="tooltip" data-tooltip="最初からやり直す" href="/question11">
+                  <a class="tooltip" data-tooltip="最初からやり直す" href="/ask">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-mail-reply fa-stack-1x" style="color: #333;"></i>
                   </a>
