表示改善&ハッシュタグ追加

--- a/app/views/tour/_detail.html.erb
+++ b/app/views/tour/_detail.html.erb
@@ -1,4 +1,6 @@
 <div id="cityname" style="display:none;"><%= cityname %></div>
+<div id="instagramphoto" class="instagram"></div>
+<div class="instagram tabitane"></div>
 <div class="instagram food"></div>
 <div class="instagram view"></div>
 <div class="instagram sight"></div>
