--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -121,10 +121,12 @@ $(window).load(function() {
       <% if ! item['img'].empty? %>
 
         <!-- データを変数に格納 -->
-        <% item['panoramio_photos'].sample(1).each do |photo| %>
-          <% @img_url = photo['photo_file_url'] %>
-          <% @caption = photo['photo_title'] %>
-        <% end %>
+        <% photo = item['panoramio_photos'].sample(1)[0] %>
+        <% @img_url = photo['photo_file_url'] %>
+        <% @caption = photo['photo_title'] %>
+        <% @photo_url = photo['photo_url'] %>
+        <% @photo_owner = photo['owner_name'] %>
+        <% @photo_owner_url = photo['owner_url'] %>
 
         <% @tour_url = item['urls']['pc'] %>
         <% @title = item['title'] %>
@@ -134,6 +136,11 @@ $(window).load(function() {
         <li>
           <div class="tour">
             <div class="pic" style="background-image: url('<%= @img_url %>');">
+              <div style="position: absolute; bottom: 0; right: 0; text-align: right;">
+                <!--<a href='<%= @photo_url %>'>Photo</a>-->author: <a href='<%= @photo_owner_url %>'><%= @photo_owner %></a>
+                <br />
+                Photos provided by Panoramio are under the copyright of their owners.
+              </div>
             </div>
 
             <div class="gradient"></div>
