Add hashtag img and css #119

--- a/app/views/tour/_detail.html.erb
+++ b/app/views/tour/_detail.html.erb
@@ -1,5 +1,13 @@
 <div id="cityname" style="display:none;"><%= cityname %></div>
 <div id="instagramphoto" class="instagram"></div>
+<div class="hashtag">
+  <%= image_tag('hashtag_l.png') %>
+  <div class="hashtag_l">#tokyotabinotane</div>
+</div>
+<div class="hashtag">
+  <%= image_tag('hashtag_s.png') %>
+  <div class="hashtag_s">#tokyotabinotane</div>
+</div>
 <div class="instagram tabitane"></div>
 <div class="instagram food"></div>
 <div class="instagram view"></div>
