写真が無い場合の画像表示

--- a/app/views/tour/_detail.html.erb
+++ b/app/views/tour/_detail.html.erb
@@ -1,12 +1,12 @@
 <div id="cityname" style="display:none;"><%= cityname %></div>
 <div id="instagramphoto" class="instagram"></div>
-<div class="hashtag">
+<div id="nophoto_l" class="hashtag" style="display:none;">
   <%= image_tag('hashtag_l.png') %>
-  <div class="hashtag_l">#tokyotabinotane</div>
+  <div class="hashtag_l"><%="#" + cityname.downcase + "tabinotane" %></div>
 </div>
-<div class="hashtag">
+<div id="nophoto_s" class="hashtag" style="display:none;">
   <%= image_tag('hashtag_s.png') %>
-  <div class="hashtag_s">#tokyotabinotane</div>
+  <div class="hashtag_s"><%="#" + cityname.downcase + "tabinotane" %></div>
 </div>
 <div class="instagram tabitane"></div>
 <div class="instagram food"></div>
