--- a/app/views/tour/search.html.erb
+++ b/app/views/tour/search.html.erb
@@ -145,6 +145,24 @@ $(window).load(function() {
       //$(that).append(createPhotoElement(photo));
       $('#instagramphoto').append(createPhotoElement(photo));
     });
+    console.log(response);
+  }
+
+  function loadInstagram(divclass, hashtag) {
+    var dfd = jQuery.Deferred();
+    $(divclass).on('didLoadInstagram', function(event, response) {
+      var that = this;
+      $.each(response.data, function(i, photo) {
+        $('#instagramphoto').append(createPhotoElement(photo));
+      });
+      console.log(response);
+      dfd.resolve();
+    });
+    $(divclass).instagram({
+      hash: hashtag,
+      clientId: cid
+    });
+    return dfd.promise();
   }
 
   google.maps.event.addDomListener(window, 'load', initialize);
