写真検索ロジックの改善・バグ修正

--- a/app/views/tour/_detail.html.erb
+++ b/app/views/tour/_detail.html.erb
@@ -13,3 +13,4 @@
 <div class="instagram view"></div>
 <div class="instagram sight"></div>
 <div class="instagram arch"></div>
+<div class="instagram jp"></div>
