--- a/app/views/tour/detail.js.erb
+++ b/app/views/tour/detail.js.erb
@@ -22,5 +22,6 @@ $.when(
     $('#nophoto_s').css('display', 'block');
   }
   $('#modallink').trigger("click");
+  document.getElementById('spinner').className = "hidden";
 });
 
