--- a/app/views/tour/_detail.html.erb
+++ b/app/views/tour/_detail.html.erb
@@ -1,3 +1,4 @@
+<div class="modal_close"></div>
 <div id="cityname" style="display:none;"><%= cityname %></div>
 <div id="instagramphoto" class="instagram"></div>
 <div id="nophoto_l" class="hashtag" style="display:none;">
