--- a/app/views/tour/ask.html.erb
+++ b/app/views/tour/ask.html.erb
@@ -28,6 +28,8 @@ function show() {
     </div>
 
     <span><%= link_to image_tag(@ask.image_r, :class=>"circle"),@next %></span>
+  </div>
 
-   </div>
+  <%= render 'footer' %>
 </div>
+
