--- a/app/assets/stylesheets/tour.css.scss
+++ b/app/assets/stylesheets/tour.css.scss
@@ -94,6 +94,13 @@
 #select .hidden { visibility: hidden; }
 #select .visible { visibility: visible; }
 
+#select .footer {
+  padding: 100px 0 20px 0;
+  text-align: center;
+  font-size: 13px;
+  color: #999;
+}
+
 /* search */
 
 #search .tour .pic {
@@ -202,7 +209,7 @@
 
 #search .map {
   position: absolute;
-  z-index: 999;
+  z-index: 99;
   top: 530px;
   left: 110px;
   height: 200px;
@@ -211,7 +218,7 @@
 
 #search .footer {
   position: absolute;
-  z-index: 999;
+  z-index: 99;
   top: 760px;
   left: 80px;
   width: 360px;
