--- a/app/views/tour/select.html.erb
+++ b/app/views/tour/select.html.erb
@@ -24,4 +24,6 @@ function show() {
     
     <span><%= link_to image_tag(@image_r.path, :class => "circle"), '/tour?imgid=' + @image_r.image_id, {:onclick => "show();", data: {no_turbolink: true}} %></span>
   </div>
+
+  <%= render 'footer' %>
 </div>
